# Githubagent

./: .env.example  .gitignore  Makefile  README.md  agent.py  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
prompts/: __init__.py  system_prompt.py
tests/: test_agent.py  test_config.py  test_tools.py
tools/: __init__.py  code_tools.py  issue_tools.py  pr_tools.py  review_tools.py
